examples/example_25/example_25.v
Definition bar : nat. exact 2. Defined.
Fail Definition foo := 1 + bar.
